css/style.css
/*
* Niko's Style File
* http://bit.ly/1ywfhq7
*/

/* Open Sans Google Font */
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);

/* Raleway Google Font */
@import url(http://fonts.googleapis.com/css?family=Raleway:400,500,900,200);

* {
  font-family: 'Raleway', sans-serif;
  color: #f6f6f6;
}

body {
  background-color: #f6f6f6;
  padding-top: 60px;
}

.card{
  background: #ececec;
  border: 2px solid #ddd;
  border-radius: 10px;
  height: 300px;
  overflow: hidden;
  position: relative;
}

.card-wrapper {
  padding: 20px;
}

.footer {
  background: #BA2732;
  padding: 40px;
  text-align: center;
}

.footer p {
  color: #8C1A21;
}

.footer i {
  color: #8C1A21;
  padding: 6px;
  transition: color 0.2s ease;
}

.footer i:hover {
  color: #f6f6f6;
}

h1 {
  font-weight: 900;
}

h2 {
  color: #BA2732;
  font-weight: 900;
}

.hero {
  background: #BA2732;
  padding: 40px;
}

.hero .about {
  padding: 30px;
}

.hero img {
  border: 10px solid #f6f6f6;
  border-radius: 100%;
  padding: 0;
}

.hero p {
  font-size: 20px;  
  line-height: 30px;
}

.links {
  padding: 40px;
}

.links .row {
  padding: 0 20px;
}

.links img {
  height: 100%; 
  width: 100%; 
  object-fit: cover;
}

.links span.description {
  background: rgba(0,0,0,0.5);
  color: white;
  cursor: pointer;
  display: table;
  height: 300px;
  left: 0;
  opacity: 0;
  padding: 10px;
  position: absolute;
  top: 0;
  transition: opacity 0.2s ease;
  width: 100%;
}

.links span.description span {
  display: table-cell;
  font-size: 18px;
  text-align: center;
  text-shadow: 0 2px 1px rgba(0,0,0,0.3);
  vertical-align: middle;
}

.links span.description span h4 {
  font-size: 20px;
  margin: 0;
}

.card:hover span.description {
  opacity: 1;
}

.nav-bar {
  background: #f6f6f6;
  -webkit-box-shadow: 0px 1px 8px 0px rgba(0,0,0,.2);
  -moz-box-shadow: 0px 1px 8px 0px rgba(0,0,0,.2);
  box-shadow: 0px 1px 8px 0px rgba(0,0,0,.2);
  height: 60px;
  left: 0;
  padding: 0 70px;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1;
}

.nav-bar .logo {
  color: #BA2732;
  float: left;
  font-size: 30px;
  line-height: 50px;
  font-weight: bold;
}

.nav-bar .nav {
  float: right;
  font-size: 20px;
  line-height: 60px;
}

.nav-bar .nav a {
  color: #BA2732;
  padding: 0 20px;
}

.row h2 {
  font-size: 35px;
  margin: 30px 0;
  text-align: center;
}

